2004-10-03  Bruno Haible  <bruno@clisp.org>

	* modules/syscalls/calls.c: Include sys/resource.h early enough, so
	that getrlimit_arg can use it. Also include sys/types.h before
	sys/stat.h, not after it.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* syscalls/calls.c: Don't set Solaris specific flags just temporarily
	for a few includes. We don't control their effect.
	* syscalls/Makefile.in (CPPFLAGS): Add Solaris specific flags here.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* utils/modprep.lisp: Don't print modprep's timings.
	(modprep): Print a filename using ~A, not ~S.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* utils/modprep.lisp (print-tables-1): Don't export the ..._table_size
	variables.

2004-10-03  Bruno Haible  <bruno@clisp.org>

	* utils/modprep.lisp (print-tables-1): Declare 'index' as
	'unsigned int', not 'int'. Avoids gcc warnings.
	* modules/syscalls/calls.c (POSIX::LIMITS): Declare pos as
	'unsigned int', not 'int'.

2004-09-30  Bruno Haible  <bruno@clisp.org>

	* type.lisp (subtype-integer): Signal an error if the argument is a
	circular or dotted list.

2004-09-30  Bruno Haible  <bruno@clisp.org>

	* sequence.d (valid_type1): Call SYS::SUBTYPE-SEQUENCE as a last
	chance to determine the sequence type.
	* type.lisp (subtype-sequence, type-of-sequence, sequence-type-union)
	(sequence-type-intersection): New functions.

2004-09-30  Bruno Haible  <bruno@clisp.org>

	* sequence.d (valid_type1, get_seq_type): Use sequence type 1 instead
	of BIT-VECTOR.
	(delete_help): Simplify accordingly.
	* defseq.lisp (BIT-VECTOR): Remove. Replaced by sequence type 1.

2004-09-29  Bruno Haible  <bruno@clisp.org>

	* defmacro.lisp (macro-nonnull-element-error): New function.
	(empty-pattern): Use it in the macroexpansion.

2004-09-29  Bruno Haible  <bruno@clisp.org>

	* fill-out.lisp (stream-start-s-expression, stream-end-s-expression):
	No need for EVAL-WHEN (COMPILE).
	* format.lisp (formatter-main-1): Don't call STREAM-START-S-EXPRESSION